# prefect-sample

./: .prefectignore  README.md  main.py  prefect.yaml  pyproject.toml
prefect_sample/: repo_info.py  weather_flow.py
prefect_sample/deploys/: deploy_repo_info.py
