[tool.poetry]
name = "prefect-sample"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "prefect_sample"}]

[tool.poetry.dependencies]
python = "^3.11,<3.12"
prefect = "^2.14.20"
prefect-gcp = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
